--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,9 @@
 body {
-  font-family: Arial, sans-serif;
-}
-.weather-app {
-  max-width: 600px;
-  margin: 30px auto;
-  padding: 20px;
-  border: 1px solid #dadde1;
-  border-radius: 5px;
+  font-family: arial, sans-serif;
 }
 
 h1 {
+  color: #878787;
   font-size: 24px;
   font-weight: 100;
   line-height: 28 px;
@@ -23,9 +17,42 @@ ul {
 
 li {
   margin: 0;
-  padding: 0%;
+  padding: 0;
   list-style: none;
   font-size: 16px;
+  color: rgb(135, 135, 135);
   font-weight: 100;
   line-height: 19px;
+}
+
+li:first-letter {
+  text-transform: capitalize;
+}
+
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.weather-app {
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+
+.overview {
+  margin-bottom: 20px;
+}
+
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+}
+
+.weather-temperature strong {
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
 }
