--- a/src/style.css
+++ b/src/style.css
@@ -56,3 +56,28 @@ li:first-letter {
   line-height: 1;
   font-weight: 400;
 }
+
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
+}
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: #0000;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature {
+  font-size: 13px;
+}
