--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,16 @@ li:first-letter {
   top: -34px;
 }
 
+.weather-temperature .active {
+  color: rgb(33, 33, 33);
+  cursor: default;
+  text-decoration: none;
+}
+
+.weather-temperature .active:hover {
+  text-decoration: none;
+}
+
 .weather-forecast {
   margin-top: 20px;
   text-align: center;
