--- a/src/style.css
+++ b/src/style.css
@@ -85,3 +85,22 @@ li:first-letter {
 #celsius-link {
   text-decoration: none;
 }
+
+.weather-forecast {
+  margin: 20px;
+  text-align: center;
+  color: #0000;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+weather-forecast-temperature {
+  font-size: 13px;
+}
+
+weather-forecast-temperature-min {
+  opacity: 0.5;
+}
