--- a/src/style.css
+++ b/src/style.css
@@ -101,6 +101,6 @@ weather-forecast-temperature {
   font-size: 13px;
 }
 
-weather-forecast-temperature-min {
+.weather-forecast-temperature-min {
   opacity: 0.5;
 }
